--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -62,14 +62,15 @@
     <div>
       <h1>Great teamwork starts with a digital HQ</h1>
 
-      <p>Slack is free to try for as long as you'd like.</p>
+      <p><span class="yellow-tag">Slack is free to try</span> for as long as you'd like.</p>
 
-      <div>
-        <button>Sign up with email</button>
+      <div class="buttons">
+        <button class="email">Sign up with email</button>
 
-        <button>
-          <img src="./images/logo-google.png" alt="Google logo" />
-          <span>Sign up with Google</span>
+        <button class= "google">
+          <img id= "google-image" src="./images/logo-google.png" alt="Google logo" />
+          <div class="google-text"><span>Sign up with Google</span></div>
+          
         </button>
       </div>
 
